--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -3,15 +3,15 @@
         <div class="row">
           <div class="row">
             <div class="col s12 m12">
-              <div class="carousel bio">
+              <div class="carousel bio" #carousel>
                 <div class="carousel-item" href="#one!">
                   <div class="card">
                     <div class="card-image fotosBio">
-                      <img src="./imgs/fotoBio.jpg" alt="" class="responsive-img">
+                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/fotoBio.jpg?alt=media&token=03e7d72c-011c-483c-ad4d-d9fb30bf1ed8" alt="" class="responsive-img">
                     </div>
                     <div class="card-content">
                       <span class="card-title">¿Quien Soy?</span>
-                      <p>Venezolana, viviendo hace 9 años en Chile. Perseverante y trabajadora. Me apasiona lo que hago y
+                      <p>Venezolana, viviendo hace 10 años en Chile. Perseverante y trabajadora. Me apasiona lo que hago y
                         me
                         esfuerzo en hacerlo lo mejor posible. Soy creativa y me encanta buscar soluciones innovadoras.</p>
                     </div>
@@ -20,7 +20,7 @@
                 <div class="carousel-item" href="#two!">
                   <div class="card">
                     <div class="card-image fotosBio">
-                      <img src="./imgs/libroLover.jpg" class="responsive-img" alt="">
+                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/libroLover.jpg?alt=media&token=c990560e-5f4c-43e8-b5fb-e5d5b66c4d1a" class="responsive-img" alt="">
                     </div>
                     <div class="card-content">
                       <span class="card-title">Dato Freak</span>
@@ -34,7 +34,7 @@
                 <div class="carousel-item" href="#three!">
                   <div class="card">
                     <div class="card-image fotosBio">
-                      <img src="./imgs/logosTools.png" class="responsive-img" alt="">
+                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/logosTools.png?alt=media&token=299c7d34-d743-4810-a9a5-83acc44bac1a" class="responsive-img" alt="">
                     </div>
                     <div class="card-content">
                       <span class="card-title">Herramientas</span>
@@ -49,7 +49,7 @@
                 <div class="carousel-item" href="#four!">
                   <div class="card">
                     <div class="card-image fotosBio">
-                      <img src="./imgs/logosHerramientas/code-love.png" class="responsive-img" alt="">
+                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/code-love.png?alt=media&token=af752286-dcc6-4190-aa30-23c0c29dc7da" class="responsive-img" alt="">
                     </div>
                     <div class="card-content">
                       <span class="card-title">Intereses</span>
@@ -63,7 +63,7 @@
                 <div class="carousel-item" href="#five!">
                   <div class="card">
                     <div class="card-image fotosBio">
-                      <img src="./imgs/tiempoLibre.jpg" class="responsive-img" alt="">
+                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/tiempoLibre.jpg?alt=media&token=2b752b49-f753-4b36-8bd4-ef383ffab888" class="responsive-img" alt="">
                     </div>
                     <div class="card-content">
                       <span class="card-title">Hobbies</span>
