--- a/src/app/components/bio/bio.component.scss
+++ b/src/app/components/bio/bio.component.scss
@@ -1,12 +1,18 @@
 .carousel{
-    overflow: visible;
     margin-top: 5%;
+    overflow: inherit;
     .carousel-item {
-        width: 300px;
+        width: 400px;
         height: 300px;
         .card{
             width: 100%;
             height: 100%;
+            display: table;
+            color: #1A1A1A;
+            .fotosBio{
+                height: 300px;
+                overflow: hidden;
+            }
         }
     
     }
