--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,6 +1,9 @@
 <!-- Carrusel Bio -->
 <div class="container" id="carruselBio">
         <div class="row">
+          <div class="col m12 title-container">
+              <h1>¡Hola!</h1>
+          </div>
           <div class="row">
             <div class="col s12 m12">
               <div class="carousel bio" #carousel>
