--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -1,85 +1,23 @@
-<!-- Carrusel Bio -->
-<div class="container" id="carruselBio">
-        <div class="row">
-          <div class="col m12 title-container">
-              <h1>¡Hola!</h1>
-          </div>
-          <div class="row">
-            <div class="col s12 m12">
-              <div class="carousel bio" #carousel>
-                <div class="carousel-item" href="#one!">
-                  <div class="card">
-                    <div class="card-image fotosBio">
-                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/fotoBio.jpg?alt=media&token=03e7d72c-011c-483c-ad4d-d9fb30bf1ed8" alt="" class="responsive-img">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title">¿Quien Soy?</span>
-                      <p>Venezolana, viviendo hace 10 años en Chile. Perseverante y trabajadora. Me apasiona lo que hago y
-                        me
-                        esfuerzo en hacerlo lo mejor posible. Soy creativa y me encanta buscar soluciones innovadoras.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" href="#two!">
-                  <div class="card">
-                    <div class="card-image fotosBio">
-                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/libroLover.jpg?alt=media&token=c990560e-5f4c-43e8-b5fb-e5d5b66c4d1a" class="responsive-img" alt="">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title">Dato Freak</span>
-                      <p>Puedo leer un libro entero en un día. Soy fanática de la palabra escrita así que puedo leer casi
-                        sobre cualquier cosa, desde psicología, innovación hasta ciencia ficción. Y una vez
-                        que
-                        empiezo un libro tengo que terminarlo, no puedo dejarlo a la mitad.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" href="#three!">
-                  <div class="card">
-                    <div class="card-image fotosBio">
-                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/logosTools.png?alt=media&token=299c7d34-d743-4810-a9a5-83acc44bac1a" class="responsive-img" alt="">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title">Herramientas</span>
-                      <p>
-                        Disfruto estar en constante aprendizaje y soy una curiosa innata, por lo que siempre estoy abierta
-                        a
-                        aprender nuevos lenguajes y tecnologías.
-                      </p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" href="#four!">
-                  <div class="card">
-                    <div class="card-image fotosBio">
-                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/code-love.png?alt=media&token=af752286-dcc6-4190-aa30-23c0c29dc7da" class="responsive-img" alt="">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title">Intereses</span>
-                      <p>Me interesa la Innovación y trabajar para conectar mejor a las personas. Crear tecnología
-                        amigable.
-                        Si alguien me preguntara sobre mi lugar ideal para trabajar respondería sin lugar a dudas que
-                        quisiera estar donde pueda seguir creciendo y aprendiendo cosas nuevas.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="carousel-item" href="#five!">
-                  <div class="card">
-                    <div class="card-image fotosBio">
-                      <img src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/tiempoLibre.jpg?alt=media&token=2b752b49-f753-4b36-8bd4-ef383ffab888" class="responsive-img" alt="">
-                    </div>
-                    <div class="card-content">
-                      <span class="card-title">Hobbies</span>
-                      <p>En mi tiempo libre me gusta salir a patinar, estar al aire libre y viajar. Maratones de películas
-                        y
-                        recibir
-                        el calorcito de mi familia. Ah, también leo mucho!</p>
-                    </div>
-                  </div>
-                </div>
-    
-              </div>
-            </div>
-          </div>
-        </div>
+<div class="bio-container">
+  <div class="row section">
+    <div class="col s12 m6 left-container">
+      <img class="caro-pic"
+        src="https://firebasestorage.googleapis.com/v0/b/portafoliocaritodasilva.appspot.com/o/fotoBio.jpg?alt=media&token=03e7d72c-011c-483c-ad4d-d9fb30bf1ed8"
+        alt="" class="responsive-img">
+    </div>
+    <div class="col s12 m6 right-container">
+      <div class="row valign-wrapper center-align">
+        <h1 class="card-title">¿Quien Soy?</h1>
+
       </div>
+      <div class="row info-description">
+        <p>Venezolana, viviendo hace 11 años en Chile. Perseverante y trabajadora. Me apasiona lo que hago y
+          me
+          esfuerzo en hacerlo lo mejor posible. Soy creativa y buscar soluciones innovadoras. También me
+          encanta el café, los perritos y las papitas fritas, porque obvio, son papitas fritas. Tengo mente inquieta por
+          eso siempre estoy aprendiendo algo nuevo. ¡Trabajemos juntos!</p>
+
+      </div>
+    </div>
+  </div>
+</div>
