--- a/src/app/components/bio/bio.component.scss
+++ b/src/app/components/bio/bio.component.scss
@@ -1,27 +1,122 @@
 .title-container{
     h1{
-      font-family: 'Vidaloka', serif;
+      font-family: 'Nunito', sans-serif;
       text-align: center;
       font-size: 55px;
       font-weight: bold;
       margin: 4% 0;
   }
 }
-.carousel{
-    overflow: inherit;
-    .carousel-item {
-        width: 400px;
-        height: 300px;
-        .card{
-            width: 100%;
-            height: 100%;
-            display: table;
-            color: #1A1A1A;
-            .fotosBio{
-                height: 300px;
-                overflow: hidden;
+// .carousel{
+//     overflow: inherit;
+//     .carousel-item {
+//         width: 400px;
+//         height: 300px;
+//         .card{
+//             width: 100%;
+//             height: 100%;
+//             display: table;
+//             color: #1A1A1A;
+//             .fotosBio{
+//                 // height: 300px;
+//                 overflow: hidden;
+//             }
+//         }
+    
+//     }
+// }
+
+.bio-container {
+    h1, p {
+        font-family: 'Nunito', sans-serif;
+    }
+    .section {
+        display: flex;
+        margin-top: 6vh;
+        .left-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 0 6vw;
+            img {
+                border-radius: 16px;
+                &.caro-pic {
+                    width: 500px;
+                }
             }
         }
-    
+        .right-container {        
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            flex-direction: column;
+            h1 {
+                font-size: 50px;
+            }
+            p {
+                font-size: 30px;
+                line-height: 50px;
+                text-align: lefts;
+                
+            }
+            li {
+                font-size: 30px;
+                text-align: left;
+                line-height: 50px;
+            }
+            &.two {
+                // padding: 6%;
+                text-align: center;
+            }
+            .info-description {
+                display: flex;
+                justify-content: center;
+                max-width: 90%;
+            }
+            .card {
+                background-color: #FF9AA4 ;
+                padding: 9px;
+            }
+        }
     }
+}
+
+
+
+// @media (max-width: 480px) and (min-width: 320px) {
+//     .fotosBio {
+//         height: 200px;
+//         overflow: hidden !important;
+//     }
+// }
+// @media (min-width: 320px) and (max-width: 480px) {
+
+//     .carousel .carousel-item {
+//       width: 300px;
+  
+//     }
+  
+//     .swipe {
+//       display: block;
+//     }
+
+//     #CARRUSEL {
+//       margin-top: 10%;
+//     }
+//   }
+
+@media (min-width: 320px) and (max-width: 767px) {
+    .bio-container {
+
+        .section {
+            display: table;
+            .right-container {
+                margin-top: 10%;
+                p {
+                    font-size: 20px;
+                }
+            }
+        }
+    }
+
 }
