--- a/src/app/components/bio/bio.component.html
+++ b/src/app/components/bio/bio.component.html
@@ -14,7 +14,8 @@
         <p>Venezolana, viviendo hace 11 años en Chile. Perseverante y trabajadora. Me apasiona lo que hago y
           me
           esfuerzo en hacerlo lo mejor posible. Soy creativa y buscar soluciones innovadoras. También me
-          encanta el café, los perritos y las papitas fritas, porque obvio, son papitas fritas. Tengo mente inquieta por
+          encanta el café, amo a mis cachorros y a las papitas fritas, porque obvio, son papitas fritas. Tengo mente
+          inquieta por
           eso siempre estoy aprendiendo algo nuevo. ¡Trabajemos juntos!</p>
 
       </div>
